--- a/tasks/TD-06.md
+++ b/tasks/TD-06.md
@@ -579,69 +579,71 @@ pub struct GuestUser {
 ## Чек-лист готовности
 
 ### Backend
-- [ ] POST /api/v1/auth/register endpoint (bcrypt, валидация)
-- [ ] POST /api/v1/auth/login endpoint (JWT + refresh token)
-- [ ] POST /api/v1/auth/refresh endpoint
-- [ ] POST /api/v1/auth/logout endpoint
-- [ ] GET /api/v1/auth/me endpoint (protected)
-- [ ] GET /api/v1/users endpoint (admin only)
-- [ ] PATCH /api/v1/users/:id endpoint (admin only)
-- [ ] User model в MongoDB (email, password_hash, role, group_ids)
-- [ ] RefreshToken model в MongoDB
-- [ ] Rate limiting для login/register
-- [ ] Failed auth monitoring (5 попыток → блокировка)
-- [ ] Audit logging всех auth операций
-- [ ] Integration tests для auth flow
+- [x] POST /api/v1/auth/register endpoint (bcrypt, валидация, возвращает refresh_token)
+- [x] POST /api/v1/auth/login endpoint (JWT + refresh token, возвращает refresh_token в ответе)
+- [x] POST /api/v1/auth/refresh endpoint
+- [x] POST /api/v1/auth/logout endpoint
+- [x] GET /api/v1/auth/me endpoint (protected)
+- [x] GET /api/v1/users endpoint (admin only)
+- [x] GET /api/v1/users/:id endpoint (admin only)
+- [x] PATCH /api/v1/users/:id endpoint (admin only)
+- [x] User model в MongoDB (email, password_hash, role, group_ids)
+- [x] RefreshToken model в MongoDB
+- [x] Rate limiting для login/register (login: 10/5мин, register: 5/час per IP)
+- [x] **HTTP-only cookies для refresh tokens** (login/register/refresh/logout endpoints обновлены)
+- [x] **Failed auth monitoring** (счётчик неудачных попыток в Redis, блокировка после 5 попыток, TTL 15 мин, автоочистка, HTTP 429 Too Many Requests)
+- [x] **Audit logging всех auth операций** (коллекция audit_log, AuditService, логирование login/register/logout/change_password)
+- [x] **Integration tests для auth flow** (backend/rust-api/tests/auth_tests.rs - 16 тестов: register→login→refresh→logout, rate limiting, CSRF endpoint, валидация, unauthorized access)
 
 ### Frontend
-- [ ] Login page компонент
-- [ ] Register page компонент
-- [ ] Auth state management (AuthService)
-- [ ] Protected routes middleware
-- [ ] API client auto-refresh token
-- [ ] Unified header компонент (навигация по ролям)
-- [ ] User menu dropdown (профиль, выход)
-- [ ] **Student Home page** (темы/курсы, прогресс, достижения)
-- [ ] **Teacher Dashboard page** (статистика групп, экспорт отчетов)
-- [ ] **User Profile page** (настройки, смена пароля, активные сессии)
-- [ ] **403 Forbidden page** (доступ запрещен)
-- [ ] **Responsive design** (6 breakpoints: XXS-XL)
-- [ ] **PWA offline support** (Service Worker, Cache Storage, SRI)
-- [ ] **Accessibility (WCAG 2.1 AA)** (keyboard nav, ARIA, contrast ≥4.5:1)
-- [ ] E2E тесты Playwright для auth flow
+- [x] Login page компонент (frontend/src/pages/login-page.ts, использует AuthService)
+- [x] Register page компонент (frontend/src/pages/register-page.ts, использует AuthService)
+- [x] Auth state management (AuthService) (frontend/src/lib/auth-service.ts - полноценный класс)
+- [x] Protected routes middleware (main.ts requireAuth/requireRole функции)
+- [x] API client auto-refresh token (api-client.ts attemptTokenRefresh, 401/403 handling, **refresh_token в HTTP-only cookie**)
+- [x] **Frontend AuthService обновлен** (удален localStorage для refresh_token, использует credentials: 'include')
+- [x] Unified header компонент (frontend/src/components/app-header.ts, навигация по ролям, responsive, mobile menu)
+- [x] User menu dropdown (профиль, выход, показывает имя и роль пользователя)
+- [x] **Student Home page** (frontend/src/pages/student-home.ts, mock данные курсов, фильтры, прогресс, route /)
+- [x] **Teacher Dashboard page** (статистика групп, экспорт отчетов, использует AuthService)
+- [x] **User Profile page** (frontend/src/pages/user-profile.ts, смена пароля, активные сессии, route /profile)
+- [x] **403 Forbidden page** (frontend/src/pages/forbidden-page.ts, role-based redirect)
+- [x] **Responsive design** (6 breakpoints: XXS≤480px, XS 481-640px, SM 641-768px, MD 769-1024px, LG 1025-1199px, XL ≥1200px, mobile-first подход, CSS Grid/Flexbox, breakpoints.css + global.css, обновлены login-page, register-page, app-header с mobile menu)
+- [x] **PWA offline support** (Service Worker sw.ts: 6 кэш-стратегий, Network First для API (3s timeout), Cache First для статики/images/fonts (30 days TTL), Background Sync для POST запросов (24h retry), offline fallback page, auto cache cleanup, manifest.webmanifest с shortcuts и share_target)
+- [x] **Accessibility (WCAG 2.1 AA)** (keyboard nav: Tab/Shift+Tab/Enter/Esc в формах, Arrow Up/Down в dropdown, ARIA атрибуты: aria-label/aria-live/aria-expanded/aria-current/role в login/register/app-header, контраст ≥4.5:1: обновлены цвета в global.css (--primary #3b82f6 4.65:1, --text-muted #a5b4cb 5.1:1, --error #fca5a5 5.2:1, --success #4ade80 6.8:1, --warning #fcd34d 9.1:1), focus ring высококонтрастный --focus-ring #60a5fa, skip-to-main link в index.html, prefers-reduced-motion, prefers-contrast:high, текст масштабируется до 200% через относительные единицы и clamp())
+- [x] **E2E тесты Playwright для auth flow** (auth.spec.ts: register→login→protected routes, role-based-access.spec.ts: student/teacher/admin access, security.spec.ts: CSRF, session management, XSS protection)
 - [ ] **Accessibility tests** (axe-core, Lighthouse score ≥90)
 - [ ] **Responsive tests** (screenshot regression на всех breakpoints)
 - [ ] **PWA tests** (offline режим, Service Worker, Lighthouse PWA ≥90)
 
 ### Security
 - [ ] JWT_SECRET уникальный для production
-- [ ] HTTPS включен (TLS 1.3)
-- [ ] HSTS header настроен (`max-age=31536000; includeSubDomains; preload`)
-- [ ] CSRF protection middleware
-- [ ] CSP headers настроены (включая `frame-ancestors 'none'`)
-- [ ] Rate limiting работает
-- [ ] Refresh tokens в HTTP-only cookies
-- [ ] Bcrypt cost ≥ 12
-- [ ] Логирование всех failed auth attempts
-- [ ] **MongoDB Encryption at Rest** (AEAD-ChaCha20-Poly1305, ключи в Vault)
-- [ ] **PII Fields Encryption** (Client-Side Field Level Encryption для email/name)
-- [ ] **Subresource Integrity (SRI)** (хеши для всех статических ресурсов)
-- [ ] **Cache Poisoning Protection** (версионирование Service Worker cache)
+- [x] **HTTPS включен (TLS 1.3/1.2)** (infra/nginx/nginx.conf и trainingground.conf: ssl_protocols TLSv1.3 TLSv1.2; strong cipher suites Mozilla Modern config ECDHE-ECDSA/RSA-AES-GCM, CHACHA20-POLY1305; OCSP stapling enabled; SSL session cache 10MB; docker-compose.prod.yml с nginx:1.25-alpine и certbot для Let's Encrypt; infra/nginx/init-letsencrypt.sh для первичной настройки сертификатов; .env.example комментарии для production/development; infra/nginx/README.md полная документация deployment/monitoring/troubleshooting; rate limiting zones: api_limit 10r/s, login_limit 5r/m; nginx reverse proxy для rust-api:8081 и python-generator:8082 без exposed портов)
+- [x] **HSTS header настроен** (Strict-Transport-Security: max-age=31536000; includeSubDomains; preload в infra/nginx/conf.d/trainingground.conf; дополнительные security headers: X-Frame-Options DENY, X-Content-Type-Options nosniff, X-XSS-Protection, Referrer-Policy strict-origin-when-cross-origin, Permissions-Policy, CSP; infra/nginx/certbot-renew.sh автоматическое обновление сертификатов через cron 0 3 * * *; nginx health check endpoint /health; gzip compression enabled; keepalive для upstreams)
+- [x] **CSRF protection middleware** (double-submit cookie pattern, GET /api/v1/auth/csrf-token endpoint, X-CSRF-Token header validation, применен ко всем state-changing операциям)
+- [x] CSP headers настроены (включая `frame-ancestors 'none'`)
+- [x] **Rate limiting работает** (nginx rate limiting zones в production: api_limit 10 req/s burst 20, login_limit 5 req/min burst 5, register_limit 5 req/min burst 3, limit_conn addr 10; stricter limits для /api/v1/auth/login и /api/v1/auth/register endpoints; Redis-based backend rate limiter в rust-api через RATE_LIMIT_LOGIN_ATTEMPTS=10, RATE_LIMIT_REGISTER_ATTEMPTS=5)
+- [x] **Refresh tokens в HTTP-only cookies** (Secure, SameSite=Strict, Path=/api/v1/auth, MaxAge=30d)
+- [x] Bcrypt cost ≥ 12
+- [x] **Логирование всех failed auth attempts** (audit_log collection, события: login_failed, register_failed, change_password_failed)
+- [x] **MongoDB Encryption at Rest** (AEAD_AES_256_CBC_HMAC_SHA_512-Random/Deterministic, ключи в HashiCorp Vault; infra/config/mongodb-encryption.yaml конфигурация CSFLE для PII полей; docker-compose.yml добавлен Vault 1.15 с file backend; infra/vault/init-mongodb-encryption.sh генерирует master key и DEK для user-email/name/audit-ip/useragent; infra/vault/rotate-encryption-keys.sh автоматическая ротация каждые 90 дней с версионированием ключей (max 3 версии); AppRole authentication для rust-api; .env добавлены VAULT_ADDR, VAULT_ROOT_TOKEN, VAULT_ROLE_ID, VAULT_SECRET_ID, MONGODB_ENCRYPTION_ENABLED/PROVIDER; infra/vault/README.md полная документация setup/monitoring/troubleshooting)
+- [x] **PII Fields Encryption** (Client-Side Field Level Encryption для email (Deterministic для поиска), name, ip_address, user_agent; конфигурация в mongodb-encryption.yaml; ключи управляются через Vault KV v2; поддержка key rotation без потери доступа к старым данным)
+- [x] **Subresource Integrity (SRI)** (SHA-384 хеши для всех статических ресурсов: Vite plugin viteSRIPlugin генерирует sri-manifest.json с 13 entries, post-build script добавляет integrity атрибуты к script/link тегам в index.html, Service Worker SRIPlugin верифицирует хеши при cacheWillUpdate и cachedResponseWillBeUsed, блокирует загрузку/кеширование при несовпадении хеша, loadSRIManifest загружается при install)
+- [x] **Cache Poisoning Protection** (версионирование Service Worker cache: activate event автоматически удаляет старые версии кеша, currentCaches список в sw.ts, SRI verification предотвращает кеширование модифицированных файлов)
 - [ ] 2FA для админов (опционально для MVP)
 
 ### Deployment
-- [ ] Superuser bootstrap через Kubernetes Secrets / Vault
-- [ ] Документация деплоя обновлена
-- [ ] Environment variables настроены (.env.example)
-- [ ] Pre-commit hook проверяет что JWT_SECRET не хардкоден
-- [ ] Production checklist (docs/deployment-security.md)
+- [x] **Production deployment документация** (docs/deployment-security.md: comprehensive pre-production checklist с 90+ пунктами проверки безопасности; deployment options для Docker Compose Production/Kubernetes/Cloud (AWS ECS, Azure, GCP); Kubernetes Secrets для admin-superuser.json с примерами манифестов (Deployment, StatefulSet, Ingress, Service); HTTPS + HSTS setup с Nginx reverse proxy и Let's Encrypt; MongoDB replica set security с keyfile authentication и CSFLE; Secrets management через Vault/K8s/AWS/Azure/GCP; .env.example template для всех окружений; Monitoring/Logging setup с Prometheus/Grafana/alerts; Backup & Disaster Recovery процедуры с encryption и S3 upload)
+- [x] **Superuser bootstrap через Kubernetes Secrets / Vault** (kubectl create secret generic admin-superuser --from-file=admin-superuser.json; vault kv put secret/admin/superuser; Docker Compose volumes mount /secrets/admin-superuser.json; ADMIN_SEED_FILE=/secrets/admin-superuser.json env var; примеры для всех deployment scenarios в docs/deployment-security.md)
+- [x] Environment variables настроены (.env.example) (JWT_SECRET, JWT_ACCESS_TOKEN_TTL_SECONDS=3600, JWT_REFRESH_TOKEN_TTL_SECONDS=2592000, COOKIE_SECURE=true/false, COOKIE_SAME_SITE=Strict/Lax/None, RATE_LIMIT_DISABLED=false, RATE_LIMIT_PER_USER=100, RATE_LIMIT_PER_IP=200, RATE_LIMIT_LOGIN_ATTEMPTS=10, RATE_LIMIT_REGISTER_ATTEMPTS=5, VAULT_ADDR, VAULT_ROLE_ID, VAULT_SECRET_ID, MONGODB_ENCRYPTION_ENABLED/PROVIDER; backend/rust-api/src/config.rs CookieSettings добавлен с from_env() и parse_same_site(); auth.rs использует state.config.cookie.secure и state.config.cookie.parse_same_site(); rate_limit.rs читает RATE_LIMIT_PER_USER, RATE_LIMIT_LOGIN_ATTEMPTS, RATE_LIMIT_REGISTER_ATTEMPTS из env с fallback на константы)
+- [x] **Pre-commit hook проверяет что JWT_SECRET не хардкоден** (.githooks/pre-commit-secrets: проверка хардкоденных JWT_SECRET, API keys, паролей через regex patterns; блокирует коммит .env/.env.prod/.env.production файлов; проверяет .env.example на реальные секреты вместо placeholders; блокирует credential files (credentials.json, *.pem, *.key, admin-superuser.json); проверяет AWS credentials, private keys, database passwords; пропускает .md/.githooks/docs для избежания ложных срабатываний; интегрирован в .githooks/pre-commit; документирован в README.md раздел "Git Hooks и безопасность" с примерами ПЛОХО/ХОРОШО и инструкциями по настройке git config core.hooksPath .githooks)
 
 ### UI для всех ролей
-- [ ] Student: главная с курсами/уровнями
-- [ ] Teacher: дашборд с группами
-- [ ] Admin: консоль управления (существует)
-- [ ] Навигация адаптируется под роль
-- [ ] 403 Forbidden page (доступ запрещен)
+- [x] Student: главная с курсами/уровнями (frontend/src/pages/student-home.ts)
+- [x] Teacher: дашборд с группами
+- [x] Admin: консоль управления (существует)
+- [x] Навигация адаптируется под роль (requireAuth/requireRole в main.ts)
+- [x] 403 Forbidden page (доступ запрещен)
 
 ## Приоритеты
 
@@ -744,6 +746,6 @@ pub struct GuestUser {
 
 ---
 
-**Статус:** Не начат
+**Статус:** В процессе (частично реализовано)
 **Приоритет:** P0 (критический)
 **Блокирует:** A6, AL-1, AL-2, production запуск
