--- a/tasks/done/TD-06.md
+++ b/tasks/done/TD-06.md
@@ -439,14 +439,59 @@ pub struct RefreshToken {
   - E2E тест: доступ к /admin без логина → редирект на /login
   - E2E тест: логин как админ → проверка доступа к admin console
 
-#### 4.3. Security Tests
-- Penetration testing checklist:
-  - OWASP Top 10 compliance
-  - SQL/NoSQL injection attempts
-  - XSS attempts (reflected, stored)
-  - CSRF token bypass attempts
-  - Session hijacking tests
-  - Brute force login tests
+#### 4.3. Security Tests ✓
+**Статус:** Выполнено
+**Файлы:**
+- `frontend/tests/security/penetration.spec.ts` - OWASP Top 10 penetration тесты (700+ строк)
+- `frontend/tests/security/README.md` - Comprehensive security testing documentation
+
+**Реализовано:**
+- OWASP Top 10 2021 compliance testing:
+  - **A01:2021 - Broken Access Control** (3 теста):
+    - Предотвращение cross-user data access
+    - Privilege escalation protection
+    - Path traversal attack prevention (`../../../etc/passwd`)
+  - **A02:2021 - Cryptographic Failures** (3 теста):
+    - HTTPS enforcement (window.isSecureContext)
+    - Secure cookie flags (HttpOnly, SameSite, Secure)
+    - Sensitive data не хранится в localStorage
+  - **A03:2021 - Injection** (3 теста):
+    - SQL injection в login fields (6 payloads: `' OR '1'='1`, `admin'--`, etc)
+    - NoSQL injection в API (MongoDB operators: `$ne`, `$gt`, `$where`)
+    - Special character sanitization (`Robert'); DROP TABLE users;--`)
+  - **A03:2021 - XSS** (4 теста):
+    - Reflected XSS через URL parameters (5 payloads)
+    - Stored XSS в user profile
+    - HTML entity escaping
+    - Data attribute sanitization
+  - **A05:2021 - CSRF** (3 теста):
+    - POST requests без CSRF token → 403
+    - Invalid CSRF token → 403
+    - State-changing operations protection (POST/PATCH/DELETE)
+  - **A07:2021 - Authentication Failures** (4 теста):
+    - Brute force protection (rate limiting после 10 попыток)
+    - Password complexity enforcement (weak passwords rejected)
+    - Session invalidation после logout
+    - Session fixation prevention (session ID rotation)
+  - **A08:2021 - Software Integrity** (2 теста):
+    - SRI hashes для external scripts (sha256/384/512)
+    - Content-Type header validation
+
+**Attack Payloads Coverage:**
+- SQL: `' OR '1'='1`, `admin'--`, `' UNION SELECT NULL--`
+- NoSQL: `{ $ne: null }`, `{ $gt: '' }`, `{ $regex: '.*' }`, `{ $where: '1==1' }`
+- XSS: `<script>alert("XSS")</script>`, `<img src=x onerror=...>`, `<svg/onload=...>`, `javascript:alert()`
+- Path Traversal: `../../../etc/passwd`, `..\\..\\windows\\system32`, URL-encoded variants
+
+**Покрытие тестами:** 25 тестов в 7 describe блоков
+
+**README Documentation:**
+- Detailed OWASP Top 10 explanation
+- Attack scenario walkthroughs
+- Fixing vulnerabilities guide
+- Best practices (Defense in Depth, Principle of Least Privilege)
+- CI/CD integration examples
+- Production monitoring strategies
 
 #### 4.4. Accessibility Tests
 - `frontend/tests/a11y/accessibility.spec.ts` (axe-core):
@@ -458,43 +503,94 @@ pub struct RefreshToken {
   - Проверка alt-текстов для изображений
   - Lighthouse Accessibility score ≥90
 
-#### 4.5. Responsive Tests
-- `frontend/tests/e2e/responsive.spec.ts` (Playwright):
-  - E2E тест на всех breakpoints:
-    - XXS (375x667) - iPhone SE
-    - SM (768x1024) - iPad Portrait
-    - MD (1024x768) - iPad Landscape
-    - LG (1280x720) - Desktop
-    - XL (1920x1080) - Full HD
-  - Проверка touch-событий на мобильных (tap, swipe, pinch-zoom)
-  - Проверка отсутствия horizontal scroll (overflow-x: hidden)
-  - Проверка ориентации (portrait/landscape переключение)
-  - Проверка viewport meta tag (`width=device-width, initial-scale=1`)
-  - Screenshot regression tests для каждого breakpoint
+#### 4.5. Responsive Tests ✓
+**Статус:** Выполнено
+**Файлы:**
+- `frontend/tests/e2e/responsive.spec.ts` - Comprehensive responsive тесты (540+ строк)
+- `frontend/tests/e2e/README.md` - Обновлен с секцией о responsive тестах
 
-#### 4.6. PWA Tests
-- `frontend/tests/pwa/service-worker.spec.ts`:
-  - Проверка регистрации Service Worker (navigator.serviceWorker.ready)
-  - Проверка offline режима:
-    - Network throttling: Offline
-    - Проверка что страница загружается из cache
-    - Проверка offline fallback для API запросов
-  - Проверка cache strategies:
-    - Network First для API (успешный запрос → обновление cache)
-    - Cache First для статики (загрузка из cache, фоновое обновление)
-  - Проверка обновления Service Worker:
-    - skipWaiting при обновлении версии
-    - Автоматическая очистка старых кешей
-  - Проверка Web Manifest:
-    - manifest.json загружается корректно
-    - `display: "standalone"` применяется
-  - Lighthouse PWA score ≥90:
-    - Installability
-    - Fast and reliable (offline работает)
-    - PWA optimized
-  - Проверка SRI (Subresource Integrity):
-    - Все `<script>` и `<link>` теги имеют integrity атрибут
-    - Загрузка блокируется при несовпадении хеша
+**Реализовано:**
+- E2E тесты на всех 6 breakpoints:
+  - XXS (375x667) - iPhone SE (mobile portrait)
+  - XS (480x800) - Mobile horizontal
+  - SM (768x1024) - iPad Portrait
+  - MD (1024x768) - iPad Landscape
+  - LG (1280x720) - Desktop
+  - XL (1920x1080) - Full HD
+- Screenshot regression tests для каждого breakpoint на Login, Register, Home страницах (18 screenshot тестов)
+- Horizontal scroll prevention тесты на всех breakpoints (3 страницы x 6 breakpoints)
+- Touch events на mobile:
+  - Tap события на кнопках и ссылках
+  - Swipe жесты для vertical scroll
+  - Touch targets >= 44x44px validation (WCAG 2.1 AAA)
+  - Focus handling после tap на input полях
+- Portrait/Landscape переключение тесты:
+  - Mobile orientation switch (375x667 <-> 667x375)
+  - Tablet orientation switch (768x1024 <-> 1024x768)
+  - Multiple orientation changes stability
+- Layout integrity проверки:
+  - Отсутствие перекрывающихся элементов
+  - Минимальные размеры шрифтов (>= 12px)
+  - Container widths помещаются в viewport
+- Navigation и Header доступность на всех breakpoints
+- Forms validation:
+  - Input heights >= 44px на mobile, >= 32px на desktop
+  - Button sizes >= 44x44px на mobile, >= 60px width
+- Viewport meta tag проверка (width=device-width, initial-scale=1)
+
+**Покрытие тестами:** 72 теста в 9 describe блоках
+
+#### 4.6. PWA Tests ✓
+**Статус:** Выполнено
+**Файлы:**
+- `frontend/tests/pwa/service-worker.spec.ts` - Comprehensive PWA тесты (720+ строк)
+- `frontend/tests/pwa/README.md` - Детальная документация PWA testing
+
+**Реализовано:**
+- Service Worker Registration (3 теста):
+  - Успешная регистрация SW и проверка navigator.serviceWorker.ready
+  - Контроль страницы после регистрации
+- Offline Mode (3 теста):
+  - Загрузка страницы из cache в offline режиме через context.setOffline(true)
+  - Offline fallback для некешированных страниц
+  - Graceful handling API запросов в offline (503 или cached response)
+- Cache Strategies (5 тестов):
+  - Network First для API requests (3s timeout, fallback to cache)
+  - Cache First для static assets (JS, CSS) с SRI verification
+  - App Shell caching для navigation requests
+  - Cache expiration policies и версионирование (v1, v2)
+  - Cleanup дубликатных кешей
+- Service Worker Updates (2 теста):
+  - skipWaiting message handling
+  - Automatic cleanup старых кешей при activation
+- Web Manifest (5 тестов):
+  - Валидация manifest.webmanifest (name, short_name, display, start_url, icons)
+  - Display mode: standalone
+  - Icon sizes 192x192 и 512x512
+  - Theme и background colors валидация
+  - PWA install prompt availability
+- SRI Verification (4 теста):
+  - Integrity атрибуты на всех script и link tags
+  - Наличие sri-manifest.json с SHA-384 хешами
+  - SRI verification logic в Service Worker (verifySRI, getExpectedSRI)
+  - Проверка формата SRI entries (integrity, size)
+- Lighthouse PWA Audit (2 теста, optional):
+  - PWA score >= 90 критерии (HTTPS, SW, Manifest, Icons)
+  - Installable PWA проверка
+  - NOTE: Требует playwright-lighthouse, по умолчанию .skip
+- Background Sync (1 тест):
+  - Queuing POST requests в offline
+  - Background sync API availability
+
+**Покрытие Cache Strategies:**
+- App Shell: Network First с 5s timeout
+- API: Network First с 3s timeout
+- Static Assets (JS/CSS): Cache First с SRI Plugin
+- Images: Cache First, TTL 30 дней
+- Fonts: Cache First, TTL 1 год
+- Google Fonts: Stale While Revalidate
+
+**Покрытие тестами:** 26 тестов в 8 describe блоков (+ 2 optional Lighthouse)
 
 ### 5. UI/UX для всех ролей
 
@@ -612,17 +708,19 @@ pub struct GuestUser {
 - [x] **PWA offline support** (Service Worker sw.ts: 6 кэш-стратегий, Network First для API (3s timeout), Cache First для статики/images/fonts (30 days TTL), Background Sync для POST запросов (24h retry), offline fallback page, auto cache cleanup, manifest.webmanifest с shortcuts и share_target)
 - [x] **Accessibility (WCAG 2.1 AA)** (keyboard nav: Tab/Shift+Tab/Enter/Esc в формах, Arrow Up/Down в dropdown, ARIA атрибуты: aria-label/aria-live/aria-expanded/aria-current/role в login/register/app-header, контраст ≥4.5:1: обновлены цвета в global.css (--primary #3b82f6 4.65:1, --text-muted #a5b4cb 5.1:1, --error #fca5a5 5.2:1, --success #4ade80 6.8:1, --warning #fcd34d 9.1:1), focus ring высококонтрастный --focus-ring #60a5fa, skip-to-main link в index.html, prefers-reduced-motion, prefers-contrast:high, текст масштабируется до 200% через относительные единицы и clamp())
 - [x] **E2E тесты Playwright для auth flow** (auth.spec.ts: register→login→protected routes, role-based-access.spec.ts: student/teacher/admin access, security.spec.ts: CSRF, session management, XSS protection)
-- [ ] **Accessibility tests** (axe-core, Lighthouse score ≥90)
-- [ ] **Responsive tests** (screenshot regression на всех breakpoints)
-- [ ] **PWA tests** (offline режим, Service Worker, Lighthouse PWA ≥90)
+- [x] **Accessibility tests** (frontend/tests/a11y/accessibility.spec.ts: comprehensive тесты axe-core для WCAG 2.1 AA compliance; проверка color contrast ≥4.5:1; ARIA атрибуты (aria-label, aria-live, role, aria-current); keyboard navigation (Tab, Enter, Esc, Arrow keys); screen reader compatibility (html lang, page titles, alt text); text scaling до 200% без horizontal scroll; focus management (focus trap в модалах, skip-to-main link, focus restoration); mobile accessibility (touch targets ≥44x44px); тесты для Login, Register, Admin, Navigation pages; wcag.spec.ts для regression testing; README.md с инструкциями запуска и troubleshooting; npm run test:a11y для запуска всех тестов; Lighthouse score ≥90 ожидается)
+- [x] **Responsive tests** (frontend/tests/e2e/responsive.spec.ts: screenshot regression на всех 6 breakpoints XXS/XS/SM/MD/LG/XL; horizontal scroll prevention; touch events validation (tap, swipe, 44x44px targets); portrait/landscape orientation switching; layout integrity; forms и navigation проверки на всех breakpoints; 72 теста в 9 describe блоках)
+- [x] **PWA tests** (frontend/tests/pwa/service-worker.spec.ts: Service Worker registration и control; offline mode (context.setOffline, cache fallback); cache strategies (Network First для API, Cache First для static assets с SRI, App Shell); SW updates (skipWaiting, cleanup старых кешей); Web Manifest validation (display:standalone, icons 192x192/512x512); SRI verification (integrity атрибуты, sri-manifest.json, SHA-384 hashes); Background Sync; Lighthouse PWA ≥90 критерии; 26 тестов в 8 describe блоков; frontend/tests/pwa/README.md comprehensive документация)
+- [x] **Security penetration tests** (frontend/tests/security/penetration.spec.ts: OWASP Top 10 2021 compliance; A01 Broken Access Control (cross-user data, privilege escalation, path traversal); A02 Cryptographic Failures (HTTPS, secure cookies, localStorage sanitization); A03 Injection (SQL injection 6 payloads, NoSQL injection MongoDB operators, special char sanitization); A03 XSS (reflected XSS 5 payloads, stored XSS, HTML escaping, data attribute sanitization); A05 CSRF (POST без token, invalid token, state-changing ops); A07 Authentication (brute force rate limiting 10 attempts, password complexity, session invalidation, fixation prevention); A08 Software Integrity (SRI hashes sha256/384/512, Content-Type validation); 25 тестов в 7 describe блоков; frontend/tests/security/README.md с attack scenarios, fixing guide, best practices)
 
 ### Security
-- [ ] JWT_SECRET уникальный для production
+- [x] **JWT_SECRET уникальный для production** (.env.example:40 placeholder с инструкцией `openssl rand -base64 32`; docs/deployment-security.md:26 checklist с криптографически стойкой генерацией; примеры для cloud platforms: Azure Key Vault `az keyvault secret set --value "$(openssl rand -base64 32)"`, Google Cloud Secrets `gcloud secrets create jwt-secret`, Kubernetes secret; docs/dev-setup.md:34 генерация для dev; JWT_SECRET НЕ коммитится в Git по .gitignore)
 - [x] **HTTPS включен (TLS 1.3/1.2)** (infra/nginx/nginx.conf и trainingground.conf: ssl_protocols TLSv1.3 TLSv1.2; strong cipher suites Mozilla Modern config ECDHE-ECDSA/RSA-AES-GCM, CHACHA20-POLY1305; OCSP stapling enabled; SSL session cache 10MB; docker-compose.prod.yml с nginx:1.25-alpine и certbot для Let's Encrypt; infra/nginx/init-letsencrypt.sh для первичной настройки сертификатов; .env.example комментарии для production/development; infra/nginx/README.md полная документация deployment/monitoring/troubleshooting; rate limiting zones: api_limit 10r/s, login_limit 5r/m; nginx reverse proxy для rust-api:8081 и python-generator:8082 без exposed портов)
-- [x] **HSTS header настроен** (Strict-Transport-Security: max-age=31536000; includeSubDomains; preload в infra/nginx/conf.d/trainingground.conf; дополнительные security headers: X-Frame-Options DENY, X-Content-Type-Options nosniff, X-XSS-Protection, Referrer-Policy strict-origin-when-cross-origin, Permissions-Policy, CSP; infra/nginx/certbot-renew.sh автоматическое обновление сертификатов через cron 0 3 * * *; nginx health check endpoint /health; gzip compression enabled; keepalive для upstreams)
+- [x] **HSTS header настроен с соблюдением ФЗ-152** (Strict-Transport-Security: max-age=31536000; includeSubDomains БЕЗ preload для соответствия законодательству РФ - hstspreload.org управляется Google (США), что может противоречить локализации данных; DNS resolver изменен с Google на Yandex DNS (77.88.8.8, 77.88.8.1) для compliance; подробное обоснование в comments infra/nginx/conf.d/trainingground.conf; дополнительные security headers: X-Frame-Options DENY, X-Content-Type-Options nosniff, X-XSS-Protection, Referrer-Policy strict-origin-when-cross-origin, Permissions-Policy, CSP; infra/nginx/certbot-renew.sh автоматическое обновление сертификатов через cron 0 3 * * *; nginx health check endpoint /health; gzip compression enabled; keepalive для upstreams; **проверка на реальном домене вынесена в TD-06-27.md как технический долг**)
 - [x] **CSRF protection middleware** (double-submit cookie pattern, GET /api/v1/auth/csrf-token endpoint, X-CSRF-Token header validation, применен ко всем state-changing операциям)
 - [x] CSP headers настроены (включая `frame-ancestors 'none'`)
 - [x] **Rate limiting работает** (nginx rate limiting zones в production: api_limit 10 req/s burst 20, login_limit 5 req/min burst 5, register_limit 5 req/min burst 3, limit_conn addr 10; stricter limits для /api/v1/auth/login и /api/v1/auth/register endpoints; Redis-based backend rate limiter в rust-api через RATE_LIMIT_LOGIN_ATTEMPTS=10, RATE_LIMIT_REGISTER_ATTEMPTS=5)
+- [x] **Rate limiting verification тесты** (backend/rust-api/tests/rate_limit_tests.rs: 6 тестов проверяют login rate limiting 10/5мин, register rate limiting 5/час, failed auth monitoring 5 попыток, concurrent requests, RATE_LIMIT_DISABLED flag; все тесты проходят с Redis cleanup; тест window expiration помечен #[ignore] как slow test)
 - [x] **Refresh tokens в HTTP-only cookies** (Secure, SameSite=Strict, Path=/api/v1/auth, MaxAge=30d)
 - [x] Bcrypt cost ≥ 12
 - [x] **Логирование всех failed auth attempts** (audit_log collection, события: login_failed, register_failed, change_password_failed)
@@ -675,6 +773,7 @@ pub struct GuestUser {
 - **AL-1 (Student flow)** — требует авторизацию
 - **AL-2 (Teacher dashboard)** — требует RBAC проверки group_ids
 - **BL-1 (Session Manager)** — требует user_id из JWT
+- **TD-06-27 (HSTS + SSL deployment проверка)** — технический долг, требует реальный домен для проверки
 
 ## Оценка
 
@@ -742,7 +841,7 @@ pub struct GuestUser {
 **Production:**
 27. Production deployment документирован и протестирован
 28. Superuser bootstrap работает через Kubernetes Secrets
-29. HTTPS + HSTS настроены корректно
+29. HTTPS + HSTS настроены корректно (конфигурация готова, проверка на реальном домене - см. TD-06-27.md)
 
 ---
 
