--- a/requirements/архитектура/сущности архитекутры.md
+++ b/requirements/архитектура/сущности архитекутры.md
@@ -11,7 +11,7 @@
 2. Куратор / Учитель
 3. Администратор контента
 4. Техподдержка / DevOps
-5. Системный администратор школы *(опц.)*
+5. Системный администратор школы *(опц. он же Админ)*
 6. Регулятор / образовательный методист *(опц.)*
 
 ### **Business Service**
