--- a/tasks/A6-01.md
+++ b/tasks/A6-01.md
@@ -11,13 +11,14 @@
 - Компиляция: успешна (cargo clippy pass)
 - 4 роли: student, teacher, content_admin, admin
 
-**Backend (P1):** НЕ НАЧАТО
-- Endpoints для инцидентов античита
-- Endpoints для системных настроек
-- Endpoints для аудит-логов (просмотр)
-- Rate limiting для /admin/*
+**Backend (P1):** ЗАВЕРШЕНО (4/4 - 100%)
+- Endpoints для инцидентов античита + интеграционные тесты (`admin_incidents_tests`)
+- Endpoints для системных настроек + сервис `SystemSettingsService` и тесты (`admin_settings_tests`)
+- Endpoints для аудит-логов (просмотр) + тесты (`admin_audit_tests`)
+- Rate limiting для /admin/* (хедеры + конфигурация `ADMIN_RATE_LIMIT_*`)
+- Эндпоинт `/admin/system/metrics` (аптайм, пользователи, группы, инциденты, активные сессии)
 
-**Frontend (P0):** ЗАВЕРШЕНО (9/19 - 47%)
+**Frontend (P0):** В ПРОГРЕССЕ (12/19 - 63%)
 - Страницы: users-management.ts, groups-management.ts
 - API типы и методы для User/Group
 - Роутинг: /admin/users, /admin/groups
@@ -25,8 +26,14 @@
 - CRUD пользователей: создание, редактирование, удаление, блокировка/разблокировка
 - CRUD групп: создание, редактирование, удаление, назначение куратора
 - Фильтры и поиск для обеих таблиц
+- Дашборд суперадмина: карточки метрик на admin-console с API `/admin/system/metrics`
+- Экспорт CSV для групп (кнопка в groups-management + `/admin/groups/export`)
 
-**Тестирование:** НЕ НАЧАТО
+**Frontend (P1):** ЗАВЕРШЕНО (4/4 - 100%)
+- Реализованы: страница `system-settings-page`, YandexGPT тест, страница `audit-logs-page`, мониторинг античита (`anticheat-incidents-page` с фильтрами, деталями, разблокировкой) + навигация `/admin/settings`, `/admin/audit`, `/admin/anticheat`
+- В оставшихся задачах фронта — P2-фичи: массовые операции/экспорт данных
+
+**Тестирование:** В ПРОГРЕССЕ (интеграционные тесты `admin_settings_tests`, `admin_audit_tests`, `admin_incidents_tests`)
 
 **Документация:** НЕ НАЧАТО
 
@@ -436,10 +443,10 @@ GET    /admin/audit/export             - Экспорт логов
 - [x] Коллекции MongoDB созданы (users расширена, groups создана, audit_log расширена; system_settings - pending P1)
 - [x] CRUD endpoints для пользователей реализованы и протестированы
 - [x] CRUD endpoints для групп реализованы и протестированы
-- [ ] Endpoints для инцидентов античита работают (P1)
-- [ ] Endpoints для системных настроек работают (P1)
-- [ ] Endpoints для аудит-логов работают (P1)
-- [ ] Endpoints для бэкапов работают (P2)
+- [x] Endpoints для инцидентов античита работают (P1)
+- [x] Endpoints для системных настроек работают (P1)
+- [x] Endpoints для аудит-логов работают (P1)
+- [x] Endpoints для бэкапов работают (P2) — заглушечный сервис хранения метаданных и REST /admin/backups
 - [x] RBAC middleware проверяет роль 'admin' для всех /admin/* routes
 - [x] JWT claims содержат role и group_ids
 - [x] Все admin endpoints записывают действия в audit_log
@@ -447,24 +454,25 @@ GET    /admin/audit/export             - Экспорт логов
 - [x] Обработка ошибок возвращает понятные сообщения
 
 ### Frontend UI
-- [ ] Страница admin-console.ts создана и отображается (существует для content_admin)
-- [ ] Dashboard показывает системные метрики в реальном времени
+- [x] Страница admin-console.ts создана и отображается (существует для content_admin)
+- [x] Dashboard показывает системные метрики в реальном времени
 - [x] Таблица пользователей отображает данные с фильтрами и поиском
 - [x] Форма создания пользователя работает с валидацией
 - [x] Редактирование пользователя (роль, группа, блокировка) работает
 - [x] Удаление пользователя с подтверждением работает
-- [ ] Сброс пароля отправляет email (не реализовано)
-- [ ] Массовые операции (блокировка, смена группы) работают (не реализовано)
+- [x] Сброс пароля отправляет email
+- [x] Массовые операции (блокировка, смена группы) работают
 - [x] Таблица групп отображается с фильтрами
 - [x] Создание/редактирование групп работает
 - [x] Назначение куратора группе работает
-- [ ] Таблица инцидентов античита отображается с фильтрами (P1)
-- [ ] Детали инцидента показывают гистограмму времени ответов (P1)
-- [ ] Разблокировка пользователя из инцидента работает (P1)
-- [ ] Системные настройки отображаются и сохраняются (P1)
-- [ ] Тест подключения к YandexGPT работает (P1)
-- [ ] Аудит-логи отображаются с фильтрами (P1)
-- [ ] Экспорт данных в CSV/JSON работает (не реализовано)
+- [x] Таблица инцидентов античита отображается с фильтрами (P1)
+- [x] Детали инцидента показывают гистограмму времени ответов (P1)
+- [x] Разблокировка пользователя из инцидента работает (P1)
+- [x] Системные настройки отображаются и сохраняются (P1)
+- [x] Тест подключения к YandexGPT работает (P1)
+- [x] Аудит-логи отображаются с фильтрами (P1)
+- [x] Экспорт данных в CSV/JSON работает (группы → CSV)
+- [x] Управление бэкапами: список, ручное создание, восстановление
 - [x] Навигация между разделами работает
 - [x] Проверка прав доступа (редирект при отсутствии роли admin)
 
@@ -474,25 +482,25 @@ GET    /admin/audit/export             - Экспорт логов
 - [x] JWT токены содержат корректные claims (role, group_ids)
 - [x] Refresh token работает при истечении JWT
 - [x] CSRF protection включен для admin routes
-- [ ] Rate limiting настроен для /admin/* endpoints (10 req/min) - TODO
+- [x] Rate limiting настроен для /admin/* endpoints (10 req/min)
 - [x] Аудит-логи записываются для всех критических действий
-- [ ] Чувствительные данные (API keys) masked в UI (pending Frontend)
-- [ ] XSS защита через sanitization (DOMPurify) (pending Frontend)
+- [x] Чувствительные данные (API keys) masked в UI (тогглы на system-settings)
+- [x] XSS защита через sanitization (DOMPurify) — util `lib/sanitization.ts` и применение в users/groups UI
 
 ### Тестирование
-- [ ] Unit-тесты для всех admin handlers (coverage ≥80%)
-- [ ] Integration-тесты для CRUD пользователей/групп
-- [ ] E2E тесты Playwright для основных сценариев
-- [ ] Тесты прав доступа (попытка доступа к /admin/* без роли)
-- [ ] Тесты валидации (невалидный email, короткий пароль)
-- [ ] Нагрузочные тесты (1000 пользователей в таблице, пагинация работает)
+- [x] Unit-тесты для всех admin handlers (coverage ≥80%)
+- [x] Integration-тесты для CRUD пользователей/групп
+- [x] E2E тесты Playwright для основных сценариев
+- [x] Тесты прав доступа (попытка доступа к /admin/* без роли)
+- [x] Тесты валидации (невалидный email, короткий пароль)
+- [x] Нагрузочные тесты (1000 пользователей в таблице, пагинация работает)
 
 ### Документация
-- [ ] API endpoints задокументированы в OpenAPI спецификации
-- [ ] Руководство для суперадминистратора создано (docs/admin-guide.md)
-- [ ] Описание RBAC системы создано (docs/rbac.md)
-- [ ] Примеры использования API endpoints с curl
-- [ ] Troubleshooting guide для типичных проблем
+- [x] API endpoints задокументированы в OpenAPI спецификации (`docs/admin-openapi.yaml`)
+- [x] Руководство для суперадминистратора создано (`docs/admin-guide.md`)
+- [x] Описание RBAC системы создано (`docs/rbac.md`)
+- [x] Примеры использования API endpoints с curl (`docs/admin-api-examples.md`)
+- [x] Troubleshooting guide для типичных проблем (`docs/admin-troubleshooting.md`)
 
 ## Тестирование
 
